# gnu_g-wrap

./: .bzrignore  .cvsignore  .gitignore  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  THANKS  TODO  autogen.sh  common.mk  configure.ac  configure.in  g-wrap-config.1  g-wrap-config.in  g-wrap.pc.in  g-wrap.scm  kill-usr-include
doc/: Makefile.am  aggregate.texi  effective-version.texi  g-wrap.texi  install.texi  preface.texi  report-bugs.texi  version.texi
example/: Makefile.am  README
examples/: update-format.scm
g-wrap/: .cvsignore  Makefile.am  c-codegen.scm  c-types.scm  config.scm.in  core-runtime.c  core-runtime.h  dummy-main.c  enumeration.scm  ffi-support.h  ffi-support.h.in  ffi.scm  g-wrap-compatibility.c  g-wrap-compatibility.h  g-wrap-glib.c  g-wrap-glib.h  g-wrap-runtime.c  g-wrap-runtime.h  g-wrap-wct.c  g-wrap-wct.h  gtkobj.scm  guile-runtime.c  guile-runtime.h  guile-wct.c  guile-wct.h  guile.scm  gw-glib-spec.scm  gw-gtk-spec.scm  gw-standard-spec.scm  gw-wct-spec.scm  output-file.scm  rti.scm  runtime.scm  scm-codegen.scm  simple-type.scm  sorting.scm  util.scm
g-wrap/guile/: Makefile.am  gw-standard-spec.scm  standard-spec.scm  wct-spec.scm
g-wrap/guile/ws/: standard.scm
g-wrap/ws/: standard.scm
guile/: Makefile.am  g-wrap-2.0-guile.pc.in  g-wrap-wct.h  run-guile.in
guile/examples/: Makefile.am  miscutils-guile.c  miscutils-guile.h  miscutils-spec.scm  miscutils.c  miscutils.h
guile/g-wrap/: Makefile.am  compat.scm  guile-compatibility.c  guile-compatibility.h  guile-runtime.c  guile-runtime.h  guile-wct.c  guile-wct.h  guile.scm  gw-glib-spec.scm  gw-standard-spec.scm  gw-wct-spec.scm  gw-wct.scm  simple-type.scm
guile/g-wrap/guile/ws/: standard.scm
guile/g-wrap/gw/: Makefile.am
guile/test/: Makefile.am  g-wrap-test-c-code.h  guile-test-aggregating-spec.scm  guile-test-c-code.c  guile-test-c-code.h  guile-test-child-spec.scm  guile-test-compat-spec.scm  guile-test-enumeration-spec.scm  guile-test-env  guile-test-env.in  guile-test-parent-spec.scm  guile-test-standard-spec.scm  test-compat  test-enumeration  test-enumeration-spec.scm  test-standard  test-standard-spec.scm  test-wct
lib/: Makefile.am
m4/: gnulib-cache.m4  gnulib-comp.m4  gw-util.m4  libcheck.m4-in  libchecks.m4  libchecks.m4-in
old/: ChangeLog  g-wrap.scm
old/doc/: .cvsignore  Makefile.am
old/g-wrap/: dynamic-type.scm  g-translate.scm  gw-standard-spec.scm  gw-wct-spec.scm  simple-type.scm
old/test/: gw-guile  gw-test-child-spec.scm  gw-test-parent-spec.scm  gw-test-standard-spec.scm  test-gw-simple-type-spec.scm  test-gw-standard
rpm/: .cvsignore  Makefile.am  spec.in
scheme48/: Makefile.am
scheme48/g-wrap/: Makefile.am  scheme48.scm
scheme48/g-wrap/gw/: Makefile.am
scheme48/g-wrap/scheme48/ws/: standard.scm
scheme48/test/: Makefile.am  packages.scm  s48-test-standard-spec.scm  s48-test-standard.scm
srfi/: srfi-34.scm
test/: .cvsignore  Makefile.am  g-wrap-test-c-code.c  g-wrap-test-c-code.h  guile-test-env  gw-test-enumeration-spec.scm  gw-test-glib-spec.scm  gw-test-standard-spec.scm  packages.scm  test-aggregating-spec.scm  test-child-spec.scm  test-enumeration  test-enumeration-spec.scm  test-gtkobj  test-gw-glib  test-gw-gtkobj-spec.scm  test-gw-standard  test-gw-wct  test-parent-spec.scm  test-standard-spec.scm  test-standard.scm
test/guile/: Makefile.am  guile-test-env  gw-test-enumeration-spec.scm  gw-test-standard-spec.scm  test-gw-standard
