
####
#### Copyright (C) 2015
#### David Pirotte <david at altosw.be>

#### This file is part of G-Wrap.

#### G-Wrap is free software: you can redistribute it and/or modify it
#### under the terms of the GNU Lesser General Public License as
#### published by the Free Software Foundation, either version 2 of
#### the License, or (at your option) any later version.

#### G-Wrap is distributed in the hope that it will be useful, but
#### WITHOUT ANY WARRANTY; without even the implied warranty of
#### MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#### General Public License for more details.

#### You should have received a copy of the GNU General Lesser Public
#### License along with G-Wrap.  If not, see
#### <http://www.gnu.org/licenses/>.
####

AUTOMAKE_OPTIONS = gnu

info_TEXINFOS = g-wrap.texi

g_wrap_TEXINFOS =	\
install.texi		\
preface.texi		\
aggregate.texi		\
report-bugs.texi	\
fdl.texi
